RentedMachine/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: springboot-app-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
spec:
  ingressClassName: nginx
  rules:
    - host: app-hzz3e4.o19qgi.us-east-2.febe.k8s
      http:
        paths:
          - backend:
              service:
                name: springboot-service-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
